ренейминг endpoint'ов с уходом интеграции с Телеграмм, добавлены тесты, поправлены header Login-Password
